# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.7 2004/11/04 00:14:53 port001 Exp $

04 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Moved the session checking code from Page_Login._check_session into
   the index files. 

03 Nov 2004; Ian Leitch <port001@gentoo.org>:
 * Moved login form out of the Header and into it's own page. Header executing
   code = bad. Still needs work.    
 * Bug fixes.

28 Oct 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Added a status (draft, pending, published) field to the subscript table.
 * A little more exception handling code.
 * Bug fixes.

29 Sep 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Removed the error reporting code from the non-admin interface to make it
	easier to work with for now.
 * Changed the index.py quite a bit. Hopefully for the better :-).
 * Redesigned the non-admin interface because it was getting extremely
	difficult to work with.
 * Implemented basic commenting
 * You can now view scripts, view your scripts, create a new script,
	add comments to scripts.
 * Added TODO file.
 * Removed the login and session setup code from index.py and moved it into
	Page_Login.py.
 * Created a SubScript class within the Script.py module.
 * Made a few additions to the glsr.css.
 * Renamed some columns in the comments table.

	
22 Aug 2004; Scott Hadfield <hadfield@gentoo.org>:
 * Modified the Template module to comply with a naming standard. Functions
names as [a-z_][a-z1-9_]*. Fixed all of the code depending on those functions.
 * Removed the Print() function and replaced it with an output() function
which simply passes back the text that needs to be printed.
 * Fixed a couple bugs that had been haunting the template module :-).
 * Fixed some inconsitent use of tabs in: admin/Page_News.py, Stat.py