@@ -2,11 +2,14 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.7 2004/11/04 00:14:53 port001 Exp $
+# $Id: ChangeLog,v 1.8 2004/11/04 00:59:22 port001 Exp $
 
 04 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Moved the session checking code from Page_Login._check_session into
    the index files. 
+ * site modules now accept any number of arguments from the index. This
+   saves us performing duplicate queries. admin modules and index not yet
+   converted.
 
 03 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Moved login form out of the Header and into it's own page. Header executing
